# nec2web

./: LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
necpp/: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  Doxyfile  INSTALL.md  Makefile.am  Makefile.git  NEWS  README.md  TODO.md  bindings.cpp  configure.ac  makefile.dist  nec2++-9999.ebuild  nec2++.1  nec2diff.1  necpp.pc.in
necpp/Ruby/: README.md
necpp/Ruby/genetic_optimizer/: .gitignore  Antenna.rb  Antenna_TC.rb  (+16 more)
necpp/antlr/: .gitignore  README.md  antlr_test.cpp  electro.g  example_fail.nec  from_string.h  nec.g
necpp/debian/: changelog  control  copyright  libnecpp-dev.install  libnecpp0.install  rules
necpp/docs/: mainpage.dox
necpp/example/: .gitignore  Makefile.pkg-config  README.md  example1.nec  test.py  test.rb  test_cpp.cpp  test_nec.c  test_nec.nec
necpp/python/: README.md
necpp/src/: AntennaInput.h  BaseInput.h  CurrentInput.h  Makefile.am  PowerBudget.h  RadiationInput.h  XGetopt.cpp  XGetopt.h  atlas_check.cpp  atlas_check.sh  c_evlcom.cpp  c_evlcom.h  c_evlcom_tb.cpp  c_geometry.cpp  c_geometry.h  c_geometry_tb.cpp  c_ggrid.cpp  c_ggrid.h  c_plot_card.cpp  c_plot_card.h  catch.hpp  common.h  electromag.cpp  electromag.h  libNEC.cpp  libnecpp.h  math_util.h  math_util_tb.cpp  matrix_algebra.cpp  matrix_algebra.h  matrix_algebra_tb.cpp  misc.cpp  misc.h  nec2cpp.cpp  nec2cpp.h  necDiff.cpp  nec_context.cpp  nec_context.h  nec_context_tb.cpp  nec_debug.h  (+17 more)
necpp/templates/: cpp  h
necpp/testharness/: .gitignore  README.md  build_debug.sh
(+72 files in other folders)
